WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296254
[Liquid Glass] [iOS] Scroll pockets disappear after ending a navigation swipe
https://bugs.webkit.org/show_bug.cgi?id=296254
Summary
[Liquid Glass] [iOS] Scroll pockets disappear after ending a navigation swipe
Wenson Hsieh
Reported
2025-07-20 15:58:44 PDT
To reproduce on iPhone/iPad: 1. Go to webkit.org 2. Scroll down 3. Click on any link 4. Swipe back The top and/or bottom scroll pockets will go missing (i.e. no longer in the view hierarchy), until you resize the window or scroll down/up to cause UIKit to invalidate and recompute the cached pocketed element region.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-07-20 15:58:55 PDT
<
rdar://problem/156274449
>
Wenson Hsieh
Comment 2
2025-07-20 16:08:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48308
EWS
Comment 3
2025-07-20 20:15:42 PDT
Committed
297668@main
(0a7fbd0e8775): <
https://commits.webkit.org/297668@main
> Reviewed commits have been landed. Closing PR #48308 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug